# RP2040_Examples

./: .gitignore  .gitmodules
0.Blinky/: CMakeLists.txt  FreeRTOS_Kernel_import.cmake  blinky.code-workspace
0.Blinky/FreeRTOS-Kernel/: tasks.c
0.Blinky/FreeRTOS-Kernel/portable/Common/: mpu_wrappers.c
0.Blinky/src/: main.c
1.BareMetal_UART/: BareMetal_UART.code-workspace  CMakeLists.txt
1.BareMetal_UART/FreeRTOS-Kernel/: History.txt
1.BareMetal_UART/FreeRTOS-Kernel/include/: stream_buffer.h
1.BareMetal_UART/include/: bitwise.h  bsp.h  uart_safe.h
1.BareMetal_UART/src/: bsp.c  main.c  uart_safe.c
2.FreeRTOS/: CMakeLists.txt
2.FreeRTOS/ProjectFiles/: CMakeLists.txt  main.c
2.FreeRTOS/freertos/: CMakeLists.txt
3.FreeAct/: CMakeLists.txt
3.FreeAct/ProjectFiles/: CMakeLists.txt
3.FreeAct/ProjectFiles/include/: blinky_AO.h  bsp.h
3.FreeAct/ProjectFiles/src/: blinky_AO.c  main.c
3.FreeAct/freeact/: FreeAct.c
3.FreeAct/freertos/: FreeRTOSConfig.h
4.LCD_I2C/: CMakeLists.txt  LCD-I2C.code-workspace
4.LCD_I2C/ProjectFiles/: CMakeLists.txt
4.LCD_I2C/ProjectFiles/include/: dev_hd44780.h
4.LCD_I2C/ProjectFiles/src/: dev_hd44780.c  i2c_scan.c  main.c
5.ADC_Buttons/ProjectFiles/: CMakeLists.txt
5.ADC_Buttons/ProjectFiles/src/: main.c
6.SD_SPI/: CMakeLists.txt  SD_SPI.code-workspace
6.SD_SPI/ProjectFiles/: CMakeLists.txt
6.SD_SPI/ProjectFiles/include/: spi_sd.h
6.SD_SPI/ProjectFiles/src/: main.c  main2.c  spi_sd.c
6.SD_SPI/fatfs/: CMakeLists.txt
6.SD_SPI/fatfs/include/: tf_card.h
7.Encoder_I2C_PIO/: CMakeLists.txt
7.Encoder_I2C_PIO/ProjectFiles/: CMakeLists.txt
7.Encoder_I2C_PIO/ProjectFiles/src/: AS5600.c  i2c_scan.c  main.c
7.Encoder_I2C_PIO/pio_i2c/: CMakeLists.txt
8.Motor_PIO/: .gitignore  CMakeLists.txt  Motor_PIO.code-workspace
8.Motor_PIO/ProjectFiles/: CMakeLists.txt
8.Motor_PIO/ProjectFiles/include/: AS5600.h
8.Motor_PIO/ProjectFiles/src/: AS5600.c  main.c
